--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,4 +23,4 @@ steps:
 - task: PublishPipelineArtifact@0
   inputs:
     artifactName: 'angular-build'
-    targetPath: 'src/angular/dist'
+    targetPath: 'src/dist'
