Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ steps:
     npm install
     ng build --prod
   displayName: 'npm install and build'
+  workingDirectory: src/dist
 - task: PublishPipelineArtifact@0
   inputs:
     artifactName: 'angular-build'
