--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,13 +14,16 @@ steps:
   inputs:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
+  
 
 - script: |
+    mkdir src/dist
     npm install -g @angular/cli
     npm install
     ng build --prod
-  displayName: 'npm install and build'
   workingDirectory: src/dist
+  displayName: 'npm install and build'
+  
 - task: PublishPipelineArtifact@0
   inputs:
     artifactName: 'angular-build'
