--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,15 +21,14 @@ steps:
     npm install -g @angular/cli
     npm install
     ng build --prod
-- task: DownloadBuildArtifacts@0
+  
+
+- task: DownloadPipelineArtifact@2
   inputs:
     buildType: 'specific'
     project: '1968bc11-10a5-49ed-99da-9c0a221981cf'
-    pipeline: '7'
+    definition: '7'
+    specificBuildWithTriggering: true
     buildVersionToDownload: 'latest'
-    downloadType: 'single'
     artifactName: 'Angular-Build'
-    downloadPath: '$(System.ArtifactsDirectory)'
-  displayName: 'npm install and build'
-  
-
+    targetPath: '$(Pipeline.Workspace)'
